--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body{
     background-attachment: fixed;
     margin-bottom:0;
     margin-right: 0;
+
 }
 .link{
     text-decoration: none;
@@ -56,8 +57,11 @@ body{
         border-left: none;
         border-bottom: none;
         border-width: 1px;
+        transition: background-color 0.5s ease-out;
+
     }
     .navbar a:hover{
+        color:white;
         background-color: dimgray;
         text-decoration:none;
     }
@@ -86,7 +90,7 @@ body{
     }
     /* BLOG */
         .blog{
-        
+
             border:none;
             border-bottom: dashed;
             border-color:cornsilk;
@@ -97,9 +101,36 @@ body{
             grid-template-columns: 33% 33%;
             background:none;
             padding: 20px;
+            overflow-y:auto
+        }
+        .blogWrapper{
+            margin-top:3%;
+            align-items: flex-start;
+            justify-content: space-around;
+            background: none;
+            border: none;
+            display: grid;
+            grid-template-columns: 20% 80%;
+            grid-template-columns: flex;
+            
+            overflow-y:auto
+
+        }
+        
+        .newsBanner{
+            height:500px;
+            max-height:1000px;
+            margin-top: 10px;
+            background: none;
+            height: 200%;
+            padding-bottom: 1000px;
+            overflow: scroll;
+        }
+        .blogWrapper div{
+            margin-bottom: auto;
         }
         #lower{
-    
+
             margin-top: 7%;
             justify-content: space-around;
             display:grid;
@@ -110,28 +141,32 @@ body{
             border:none;
         }
         .blog div{
-            
+
             width: 100%;
             height: 100%;
             margin-bottom: 5px;
         }
-    
+
         .dateNtime{
             margin-top:-5px;
             font-style: italic;
             font-weight: bold;
+            text-align: left;
         }
-        .blogText{
+        .blogTextBox{
             border-style: solid !important;
             border: cadetblue ;
             background-color: rgb(66, 109, 110) !important;
             width: 120%;
-            
+
         }
         .blog textarea{
             resize: none;
             width: 100%;
             display: block;
+        }
+        .blogText{
+          border:none;
         }
     /* ~BLOG */
 
@@ -189,7 +224,7 @@ body{
             display: grid;
             grid-template-columns: 35% 35% ;
             justify-content: space-around;
-           
+
             row-gap: 20px;
             text-align: center;
         }
@@ -206,13 +241,13 @@ body{
             border-radius: 25%;
             border: 4px dashed rgb(28, 46, 54);
             color:cornsilk;
-        
+
         }
         .musicContainer{
-            
+
             background-color: rgb(77, 112, 128);
             font-size: 1.4em;
-            
+
 
         }
         .filmContainer{
@@ -231,7 +266,7 @@ body{
             grid-template-columns: 33% 33% 33%;
             grid-template-rows: 33% 33% 33%;
             justify-content: space-around;
-            
+
         }
         .contentGallery div{
             width: 100%;
@@ -244,7 +279,7 @@ body{
         {
             width: 70%;
             margin:-20px auto 0 ;
-            margin-bottom:70px;
+
             border-style: dashed;
             border-radius: 5%;
             border-width: 5px;
@@ -253,30 +288,52 @@ body{
             grid-template-columns: 33% 33% 33%;
             grid-template-rows: 33% 33% 33%;
             justify-content: space-around;
-        
+            max-height: 300px;
+            overflow: scroll;
+
         }
         .commentGallery textarea{
             width: 100%;
             height: 80%;
             resize: none;
             margin-bottom: 5px;
-            
+
         }
         .post{
             border: none !important;
             border-right: 5px solid rgb(28, 46, 54)  !important;
-            
+
         }
         .commentDiv{
             border: none;
             border-right: 5px solid rgb(28, 46, 54) ;
             width: 100%;
-            height: 100%;
+            
+
+        }
+        .userCommentContainer{
+          height:100px;
+          border:none !important;
+          
+        }
+        .userComment{
+            border:none;
+            border-bottom: dashed rgb(28, 46, 54)  ;
         }
         #last{
             border:none !important;
         }
-    /* ~FAVORITES */
+        .newSubmission{
+            width: 50%;
+            margin: auto;
+            text-align: center;
+            margin-top: 30px;
+
+        }
+        #newPic{
+            width: 50%;
+        }
+    /* ~GALLERY */
 
     /* SURVEY */
 
@@ -292,20 +349,20 @@ body{
             padding:7px;
             width: 80%;
             margin:auto;
-        
+
         }
         #rad{
             border-bottom: none;
             text-align: -webkit-center;
-            
-            
+
+
         }
         #num{
             text-align: center;
             border-top: none;
             margin-bottom: 20px;
             text-align: -webkit-left;
-            
+
         }
     /* ~SURVEY  */
 
@@ -355,12 +412,13 @@ body{
     img.musicPic{
         width:75%;
         height:80%;
-        
+
         transition: all  0.6s ease-in-out;
     }
     .filmPic:hover ,.musicPic:hover{
         transition: all  0.3s ease-in-out;
         transform: scale(1.02,1.02) rotate3d(-1,-1,1,5deg);
+
     }
     img.galleryPic{
         width:100%;
@@ -430,6 +488,22 @@ body{
         margin-top: -5px;
 
     }
+    .likeB{
+        background: none;
+        border: none;
+      background-image:url("https://i.imgur.com/LI65Kg9.png");
+      background-size: cover;
+      background-color: none;
+        font-size: 2rem;
+        width: 32px;
+        height: 32px;
+    }
+    .likeB:hover{
+       
+        transform: scale(1.1,1.1);
+        opacity: 1;
+
+    }
     form{
         padding:10px
     }
@@ -441,7 +515,7 @@ body{
         margin-bottom: 20px;
         display: block;
         margin:auto;
-        
+
     }
 
     fieldset{
@@ -449,7 +523,7 @@ body{
         margin:100px auto 100px;
         background-color:rgb(44, 71, 83);
         border: 4px solid rgb(28, 46, 54);
-        color:rgb(252, 248, 231);   
+        color:rgb(252, 248, 231);
     }
     input[type=number] {
         appearance: textfield;
@@ -473,3 +547,61 @@ body{
         margin-right: 10px;
     }
 /* ~~INPUT */
+
+/*  GAME      */
+
+.game{
+    background-color: black;
+    background-image: url("https://i.imgur.com/Kh01KLQ.png");
+    margin:auto;
+    margin-top: 7%;
+    width: 40%;    
+    text-align: center;
+    border-radius: 10%;
+    border-style: dashed;
+    font-style: italic;
+    font-weight: bold;
+    font-size: large;
+    
+}
+.game script{
+    margin: auto;
+    text-align: center;
+    margin-top: 250px;
+    width: 150%;
+    
+}
+canvas{
+    margin: auto;
+}
+.gamePic{
+    width:284px; 
+    height:150px;
+    transition: all  0.5s ease-in-out;
+    border: none;
+    opacity: 0.9;
+}
+.gamePic:hover{
+    transition: all  0.5s ease-in-out;
+    transform: scale(1.02,1.02);
+    opacity: 1;
+}
+.gameLinkContainer{
+    border-top: none !important;
+    border-bottom: none !important;
+}
+.tvImg{
+    margin: auto;
+}
+.gameContainer{
+    margin-top: 100px;
+    background:none;
+    background-image: url("https://i.imgur.com/YBRUFO3.png");
+    background-repeat: no-repeat;
+    background-position-x:50%;
+    background-position-y: -100px;
+    background-size: 85%;
+    border:none;
+    padding-bottom: 500px;
+   
+}
